--- a/index.html
+++ b/index.html
@@ -173,9 +173,9 @@ blockquote:after{
   	<div id="miss">
   	<button style="display: inline;margin-left: 5px;height: 36px;" class="submit" onclick="previous();">Previous</button><button style="display: inline;margin-left: 5px;height: 36px;" class="submit" onclick="next();">Next</button><br><br>
   	<blockquote id="quote">
-  		The man who comes back through the door in the wall will never be quite the same as the man who went out.
+  	Generate Quote
   	</blockquote>
-  	<cite id="cite">Aldous Huxley</cite>
+  	<cite id="cite"></cite>
     </div>
   <div id="table">
   </div>
